# weston

./: Makefile.am  configure.ac  meson.build  meson_options.txt
clients/: meson.build  simple-egl-explicit-synchronization.c  simple-egl.c
compositor/: main.c  meson.build  text-backend.c  weston-screenshooter.c
desktop-shell/: meson.build  shell.c
fullscreen-shell/: meson.build
ivi-shell/: hmi-controller.c  meson.build
libweston/: compositor-drm.c  compositor-fbdev.c  compositor-headless.c  compositor-rdp.c  compositor-wayland.c  compositor-x11.c  compositor.c  compositor.h  gl-renderer.c  linux-explicit-synchronization.c  linux-explicit-synchronization.h  meson.build  noop-renderer.c  pixman-renderer.c
libweston-desktop/: meson.build
protocol/: meson.build
shared/: meson.build  weston-egl-ext.h
tests/: ivi-layout-test.c  ivi_layout-test-plugin.c  meson.build
xwayland/: meson.build
