option('backend_drm',
       type: 'boolean',
       default: true,
       description: 'Weston backend: DRM/KMS')
option('backend_drm_screencast_vaapi',
       type: 'boolean',
       default: true,
       description: 'DRM/KMS backend support for VA-API screencasting')
option('backend_fbdev',
       type: 'boolean',
       default: true,
       description: 'Weston backend: fbdev (legacy)')
option('backend_headless',
       type: 'boolean',
       default: true,
       description: 'Weston backend: headless (testing)')
option('backend_rdp',
       type: 'boolean',
       default: true,
       description: 'Weston backend: RDP remote screensharing')
option('screenshare',
       type: 'boolean',
       default: true,
       description: 'Compositor: RDP screen-sharing support')
option('backend_wayland',
       type: 'boolean',
       default: true,
       description: 'Weston backend: Wayland (nested)')
option('backend_x11',
       type: 'boolean',
       default: true,
       description: 'Weston backend: X11 (nested)')
option('backend_default',
       type: 'string',
       default: '',
       description: 'Weston backend: default backend selection')

option('renderer_gl',
       type: 'boolean',
       default: true,
       description: 'Weston renderer: EGL / OpenGL ES 2.x')
option('renderer_pixman',
       type: 'boolean',
       default: true,
       description: 'Weston renderer: Pixman (software rendering)')

option('xwayland',
       type: 'boolean',
       default: true,
       description: 'Xwayland: support for X11 clients inside Weston')
option('xwayland_path',
       type: 'string',
       value: '/usr/bin/Xwayland',
       description: 'Xwayland: path to installed Xwayland binary')

option('shell_desktop',
       type: 'boolean',
       default: true,
       description: 'Weston shell UI: traditional desktop')
option('shell_fullscreen',
       type: 'boolean',
       default: true,
       description: 'Weston shell UI: fullscreen/kiosk')
option('shell_ivi',
       type: 'boolean',
       default: true,
       description: 'Weston shell UI: IVI (automotive)')

option('color_management_lcms',
       type: 'boolean',
       default: true,
       description: 'Compositor color management: lcms')
option('color_management_colord',
       type: 'boolean',
       default: true,
       description: 'Compositor color management: colord (requires lcms)')

option('launcher_logind',
       type: 'boolean',
       default: true,
       description: 'Compositor: support systemd-logind D-Bus protocol')

option('xkbcommon',
       type: 'boolean',
       default: true,
       description: 'Input: use libxkbcommon for keyboard handling')

option('libunwind',
       type: 'boolean',
       default: true,
       description: 'Compositor: use libunwind for crash backtraces')

option('image_jpeg',
       type: 'boolean',
       default: true,
       description: 'Compositor: JPEG screenshot support')
option('image_webp',
       type: 'boolean',
       default: true,
       description: 'Compositor: screensharing video support with WebP')

option('clients_simple',
       type: 'boolean',
       default: true,
       description: 'Sample clients: simple demo programs')
option('clients_suite',
       type: 'boolean',
       default: true,
       description: 'Sample clients: extended suite of demo programs')
option('clients_egl',
       type: 'boolean',
       default: true,
       description: 'Sample clients: EGL clients')
option('clients_dmabuf_drm',
       type: 'boolean',
       default: true,
       description: 'Sample clients: DRM-based dmabuf sample client')
option('clients_dmabuf_v4l2',
       type: 'boolean',
       default: true,
       description: 'Sample clients: V4L2/ViViD-based dmabuf sample client')

option('test_junit_xml',
       type: 'boolean',
       default: true,
       description: 'Tests: output JUnit XML results')
